# aki-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: cohort_norm.csv  cohort_smote.csv
data/raw/: cohort.csv
misc/: refs.bib
results/: metrics.txt  nan_counts.txt
results/tables/: features.txt
src/: main.py
src/model/: feature_selection.py  model_generator.py
src/processing/: clean.py  normalize.py
src/query/: cohort.sql  execute_query.py  icd.sql  itemid.sql
