[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aki-prediction"
version = "0.1.0"
description = "A machine learning pipeline for predicting AKI using MIMIC-III data."
authors = [{name = "Ravneet-Rahul Sandhu Singh", email = "rahulsandhu542001@gmail.com" }]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["model", "processing", "query"]
